# ten-mvp

./: .gitignore  CHANGELOG.md  ten-mvp-tree  ten-mvp.cabal  test-output
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.8.2/: package.cache  ten-mvp-0.1.0.0-inplace.conf
documentation/: Ten-MonadArchitecture.html  doc-index.html  index.html  ten-mvp.haddock
src/Ten/: MonadArchitecture.hs
test/: Spec.hs
