cabal-version:      3.12
name:               ten-mvp
version:            0.1.0.0
synopsis:           Minimal Viable Product for Ten Monad Architecture
description:        Testing the core monad stack for the Ten build system.
license:            MIT
license-file:       LICENSE
author:             Enzo J
maintainer:         business@enzojoly.dev
category:           Build Tool
build-type:         Simple
extra-doc-files:    README.md
tested-with:        GHC ==9.8.2

common common-warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
                 -fhide-source-paths

library
    import:             common-warnings
    exposed-modules:    Ten.MonadArchitecture
    build-depends:      base ^>=4.19.0.0
                      , mtl >=2.3
                      , transformers ^>=0.5 || ^>=0.6
                      , text >=2.0
                      , containers >=0.7
                      , deepseq >=1.4
                      , singletons-base >=3.0
                      , singletons-th >=3.0
                      , template-haskell >=2.16
                      , ghc-prim
                      , directory >=1.3
                      , filepath >=1.4
    hs-source-dirs:     src
    default-language:   GHC2021

executable ten-mvp-exe
    import:             common-warnings
    main-is:            Main.hs
    build-depends:      base ^>=4.19.0.0
                      , ten-mvp
                      , text
                      , mtl
                      , singletons-base
                      , containers
    hs-source-dirs:     app
    default-language:   GHC2021
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N

test-suite ten-mvp-test
    import:             common-warnings
    default-language:   GHC2021
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-depends:      base ^>=4.19.0.0
                      , ten-mvp
                      , hspec >=2.11
                      , QuickCheck >=2.14
                      , text >=2.0
                      , containers >=0.7
                      , deepseq >=1.4
                      , mtl >=2.3
                      , transformers ^>=0.5 || ^>=0.6
                      , singletons-base >=3.0
                      , exceptions >=0.10
                      , filepath >=1.4
                      , quickcheck-instances >=0.3.25
    hs-source-dirs:     test
    build-tool-depends: hspec-discover:hspec-discover
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wno-orphans
